--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
     \begin{split}
         \vec r' = R\vec r+\vec vt+\vec r_0,\quad t'=t+t_0\\
         r_a' = \sum_{b} R_{ab}r_a+v_at+r_{0a},\quad t'=t+t_0,\\
-        \textup{R — ортогональная матрица}
+        \textup{R -- ортогональная матрица}
     \end{split}
 \end{equation}
 
@@ -103,7 +103,7 @@
 
 \subsection{Преобразование координат}
 
-Рассмотрим две системы отсчёта. Система $K'$ для наблюдателя покоится, система $K$ движется относительно её со скоростью $v$, направленной вдоль оси $x$. Тогда координаты точки в системе отсчёта $K'$ зависят от её координат в системе отсчёта $K$ следующим образом:
+Рассмотрим две системы отсчёта. Система $K'$ для наблюдателя покоится, система $K$ движется относительно её со скоростью $v$, направленной вдоль оси $x$ (далее за исключением оговоренных случаев будем считать $K$ и $K'$ определёнными таким образом). Тогда координаты точки в системе отсчёта $K'$ зависят от её координат в системе отсчёта $K$ следующим образом:
 
 \begin{equation}\label{eq:lorentz_coord}
     \begin{cases}
@@ -114,13 +114,23 @@
     \end{cases}
 \end{equation}
 
+Видно, что обратные преобразования можно получить, поменяв знак скорости $v$:
 
-Преобразование Лоренца — это поворот в псевдоевклидовом четырёхмерном пространстве Минковского. В пространстве Минковского расстояние между двумя точками $\left(\vec{r_1}, t_1\right)$ и $\left(\vec{r_2}, t_2\right)$ называется интервалом и задаётся формулой
 \begin{equation}
-    S_12=c^2\left(t_1-t_2\right)^2-\left(\vec{r_1}-\vec{r_2}\right)^2
+    \begin{cases}
+    x=\gamma\left(x'+vt'\right)\\
+    t=\gamma\left(t'+vx'/c^2\right)\\
+    y=y'\\
+    z=z'
+    \end{cases}
 \end{equation}
 
-Матрицу преобразования только одной координаты и времени легко получить как матрицу поворота, сохраняющую метрику в пространстве Минковского из следующей системы уравнений:
+Преобразование Лоренца -- поворот в псевдоевклидовом четырёхмерном пространстве Минковского. В пространстве Минковского расстояние между двумя точками $\left(\vec{r_1}, t_1\right)$ и $\left(\vec{r_2}, t_2\right)$ называется интервалом и задаётся формулой
+\begin{equation}
+    S_{12}^2=c^2\left(t_1-t_2\right)^2-\left(\vec{r_1}-\vec{r_2}\right)^2
+\end{equation}
+
+Преобразования Лоренца сохраняют расстояние между любыми двумя точками. Поэтому матрицу преобразования только одной координаты и времени легко получить как сохраняющую метрику матрицу поворота из следующей системы уравнений:
 
 \begin{equation}\label{eq:lorentz_x}
     \begin{cases}
@@ -183,9 +193,126 @@
     \end{cases}
 \end{equation*}
 
-Видно, что физический смысл переменной $V$ — это введённая выше относительная скорость $v$ систем отсчёта $K$ и $K'$.
+Видно, что физический смысл переменной $V$ -- введённая выше относительная скорость $v$ систем отсчёта $K$ и $K'$.
 
-...
+При переходе к классической механике $v\ll c$ преобразование Лоренца \eqref{eq:lorentz_coord} переходит в преобразование Галилея \eqref{eq:newton}:
+
+\begin{equation*}
+    \begin{cases}
+    x'=\gamma\left(x-vt\right)\\
+    t'=\gamma\left(t-vx/c^2\right)\\
+    y'=y\\
+    z'=z
+    \end{cases}
+    \xrightarrow{c\to\infty}\quad
+    \begin{cases}
+    x'=x-vt\\
+    t'=t\\
+    y'=y\\
+    z'=z
+    \end{cases}
+\end{equation*}
+
+\subsection{Лоренцево сокращение}
+
+Система отсчёта -- совокупность начала отсчёта, прибора для измерения расстояния (``линейка'') и прибора для измерения времени (``часы'').
+
+Пусть линейка лежит вдоль оси $x$ и покоится в $K'$, а в $K$ она движется, но положение её концов измеряется одновременно. Координаты её концов в $K'$ -- $\left(x_1', t_1'\right)$, $\left(x_2', t_2'\right)$, в $K$ -- $\left(x_1, t\right)$, $\left(x_2, t\right)$. Тогда
+
+\begin{equation*}
+    \begin{cases}
+    x_1'=\gamma\left(x_1-vt\right)\\
+    x_2'=\gamma\left(x_2-vt\right)
+    \end{cases}
+\end{equation*}
+
+Истинная длина линейки: $l_0=\Delta x'=x_2'-x_1'=\gamma\left(x_2-x_1\right)$. Длина линейки в $K$: $l=\Delta x=x_2-x_1=l_0/\gamma$. Так как всегда выполняется $v <c$, то и $\gamma=\frac{1}{\sqrt{v^2-c^2}} < 1$. Значит, в движущейся системе отсчёта $K$ длина линейки будет меньше в $\gamma$ раз. Этот эффект называется лоренцевским сокращением длины.
+
+Рассмотрим теперь вместо линейки брусок со сторонами $a_x, a_y, a_z$. Повторяя рассуждения выше, получаем лоренцевское сокращение объёма:
+
+\begin{equation*}
+    \begin{cases}
+    a_x=a_x^0/\gamma\\
+    a_y=a_y^0\\
+    a_z=a_z^0
+    \end{cases}
+    \implies V=a_xa_ya_z = a_x^0a_y^0a_z^0/\gamma=V_0/\gamma
+\end{equation*}
+
+Рассмотрим теперь покоящиеся часы в два различных момента времени. Координаты этих точек в $K'$ -- $\left(x', t_1'\right)$, $\left(x', t_2'\right)$, в $K$ -- $\left(x_1, t_1\right)$, $\left(x_2, t)2\right)$. Тогда
+
+\begin{equation*}
+    \begin{cases}
+    t_1=\gamma\left(t_1'+vx'/c^2\right)\\
+    t_2=\gamma\left(t_2'+vx'/c^2\right)
+    \end{cases}
+\end{equation*}
+
+По аналогии с сокращением длины получаем лоренцевское сокращение времени -- в движущейся системе отсчёта время идёт медленнее: $\Delta t=\gamma\Delta t'=\gamma\Delta t_0$. Этот результат можно получить из условия сохранения интервала:
+
+\begin{equation*}
+    \begin{cases}
+    \Delta S_{12}^2=\Delta S_{1'2'}^2\\
+    \Delta S_{1'2'}^2=c^2\Delta t'^2\\
+    \Delta S_{12}^2=c^2\Delta t^2-\Delta x^2=c^2\Delta t^2-v^2\Delta t^2=c^2\Delta t^2\big(1-\frac{v^2}{c^2}\big)
+    \end{cases}
+    \implies \Delta t=\gamma\Delta t'
+\end{equation*}
+
+Видно, что преобразование Лоренца сохраняет четырёхобъем:
+
+\begin{equation*}
+    \begin{cases}
+    dV=dV'/\gamma\\
+    dt=\gamma dt'
+    \end{cases}
+    \implies dVdt=dV'dt'
+\end{equation*}
+
+Этот результат можно получить, посчитав детерминант матрицы преобразования Лоренца:
+
+\begin{equation*}
+    \Lambda =
+    \begin{pmatrix}
+        \gamma & -\frac{v}{c}\gamma & 0 & 0 \\
+        -\frac{v}{c}\gamma & \gamma & 0 & 0 \\
+        0 & 0 & 1 & 0 \\
+        0 & 0 & 0 & 1
+    \end{pmatrix}
+\end{equation*}
+\begin{equation*}
+    \det \Lambda = \gamma^2-\left(-\frac{v}{c}\gamma\right)^2=1
+    \implies dt'dV'=dt'dx'dy'dz'=dtdxdydz\det\Lambda=dtdV
+\end{equation*}
+
+Интервал $\Delta S'^2=c^2\Delta t'^2-\Delta x'^2$ между двумя событиями может принимать различные значения:
+
+\begin{enumerate}
+    \item $\Delta S'^2 > 0$ -- времениподобный интервал. Можно показать, что при таком значении интервала существует такая система отсчёта $K$, в которой эти события произошли в одном месте (покоящиеся в $K'$ часы): $\Delta x=0$. Действительно, предположим, что такая система отсчёта существует и двигается со скоростью $v$ относительно $K'$. Тогда
+    \begin{equation*}
+        \begin{cases}
+        \Delta S'^2 > 0 \implies |c\Delta t'| > |\Delta x'|\\
+        \Delta x=0=\gamma\left(\Delta x'+v\Delta t'\right) \implies c\Delta t'=-\Delta x'\frac{c}{v}
+        \end{cases}
+    \end{equation*}
+    \begin{equation*}
+        \implies |c\Delta t'|=|-\Delta x'\frac{c}{v}|>|\Delta x'| \implies |v|<c
+    \end{equation*}
+    Условие $v<c$ справедливо для любой скорости, значит, такая система отсчёта существует.
+    \item $\Delta S'^2 < 0$ -- пространственноподобный интервал. При таком интервале существует система отсчёта, в котором события произошли одновременно (покоящаяся в $K'$ линейка): $\Delta t=0$. Аналогично рассуждениям выше получаем
+    \begin{equation*}
+        \begin{cases}
+        \Delta S'^2 < 0 \implies |\Delta x'|>|c\Delta t'|\\
+        \Delta t=0=\gamma\left(\Delta t'+\frac{v}{c^2}\Delta x'\right) \implies \Delta x'=-\frac{c^2}{v}\Delta t'
+        \end{cases}
+    \end{equation*}
+    \begin{equation*}
+        \implies |\Delta x'|=|-\frac{c^2}{v}\Delta t'|>|c\Delta t'| \implies |v|<c
+    \end{equation*}
+    \item $\Delta S'^2 = 0 \implies |c\Delta t'|=|\Delta x'| \implies \left(d\vec{r}/dt\right)^2=c^2$. Частица движется со скоростью $c$ -- это движение света.
+\end{enumerate}
+
+События могут быть причинно-связанными, если интервал между ними времениподобный или равен нулю (в таком случае происходит передача светового сигнала).
 
 \subsection{Преобразование скорости}
 
@@ -293,7 +420,7 @@
 
 ...
 
-\subsection{Теорема Пойнтинга — Умова}
+\subsection{Теорема Пойнтинга --- Умова}
 
 ...
 
